Fixed z-index (#1)

--- a/HW3/styles.css
+++ b/HW3/styles.css
@@ -1,110 +1,95 @@
 * {
-  box-sizing: border-box;
+  box-sizing: border-box
+}
+.wrap, .layer {
+  position: relative;
+}
+.wrap {
+  margin: 0 auto;
+  background-color: black;
+  z-index: 1;
 }
 
-body {
-  margin: 0;
-}
-
-.headerBg {
-  position: fixed;
-  width: 100%;
-  width: fill-available;
-  opacity: 0.75;
-
-  background-position: center top;
-  background-size: cover;
+.layer {
+  width: 100vw;
   background-image: url("img/fallen.jpg");
-  min-height: 1000px;
-  z-index: -999;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  opacity: 0.8;
+  z-index: 999;
+}
+.header, .content {
+  position: relative;
+  width: 1000px;
+  margin: 0 auto;
+}
+.header {
+  top: 0;
+  padding: 40px 0;
+  position: static;
+  border-bottom-style: solid;
+  border-bottom-color: bisque;
 }
 
 .content {
-  position: fixed;
-  z-index: 999;
-
+  top: 60px;
 }
 
-.container {
-  width: 1000px; 
-  margin: 0 auto; 
-  z-index: 2;
-  
-}
-
-.clearfix {
-  clear: both;
-}
-
-.header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  color: bisque; 
-  padding: 40px 0;
-} 
-
-.logo {
-  float: left;
-}
-
-.logo a {
-  text-decoration: none;
-  font-family: sans-serif;
-  text-transform: uppercase;
-  font-weight: 800;
-  color: bisque;
-  letter-spacing: 2px
-}
-
-.nav {
-  float: right;
-}
-
-.nav-link {
-  text-decoration: none;
-  color: bisque;
-  font-family: monospace;
-  text-transform: uppercase;
-  margin-left: 10px;
-  font-weight: 700;
-  letter-spacing: 2px
-}
-
-.content, .header {
-  position: relative;
-}
-
-.section {
-  width: 1000px;
-  margin: 0 auto;
-  color: bisque; 
-  top: 0;
-  
-}
-
-.container-content {
+.textBlock {
   padding: 40px;
   text-align: center;
   border-top-style: solid;
 }
 
-.container-content p {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.section h1 { 
+.textBlock__title {
   font-size: 300%; /*Размер шрифта */
   text-transform: uppercase;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 900;
   color: bisque;
-  
+}
+
+.textBlock__subtitle {
+  padding: 20px 0 0 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  color: bisque;
+  margin-bottom: 60px;
+}
+
+.nav {
+  padding: 30px;
+}
+.nav__logo .logo__link {
+  float: left;
+}
+.logo__link, .navbar__link {
+  text-decoration: none;
+  color: bisque;
+  font-family: monospace;
+  text-transform: uppercase;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 200
+}
+
+.logo__link:hover, .navbar__link:hover {
+  color: red;
+  /* font-weight: 300; */
+}
+
+.nav__navbar {
+  float: right;
+}
+
+.navbar__link {
+  margin-left: 10px;
+  font-weight: 700;
+  letter-spacing: 2px
 }
 
 .redButton {
-  margin: 0 20px;
-  padding: 0;
+
   border: none;
   font: inherit;
   color: bisque;
@@ -113,4 +98,18 @@ body {
   height: 35px;
   cursor: pointer;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-} 
+  border-radius: 3px 3px 3px 3px;
+  -webkit-border-radius: 3px 3px 3px 3px;
+  -moz-border-radius: 3px 3px 3px 3px;
+  -ms-border-radius: 3px 3px 3px 3px;
+  -o-border-radius: 3px 3px 3px 3px;
+}
+.redButton:hover {
+  background-color: gold;
+  color: red;
+}
+
+.clear-fix {
+  clear: both;
+}
+
